--- a/styles/base.css
+++ b/styles/base.css
@@ -1,11 +1,3 @@
-/* -------------- COLOR SCHEME ---------------
-terra cotta #E07A5F
-deep slate blue #3D405B, 
-Light Grey #f5f5f7 
-Medium Grey #d2d2d2
-Dark Grey #323232  */
-
-
 * {
   font-family: "Libre Baskerville", sans-serif;
   box-sizing: border-box;
@@ -18,7 +10,8 @@ header {
   grid-template-columns: 24px auto 44px;
   column-gap: 10px;
   align-items: end;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 5px solid deepskyblue;
+  border-radius: 1rem;
 }
 
 header img {
@@ -30,13 +23,15 @@ header img {
 
 header span {
   font-size: 1.3rem;
-  color: #323232;
+  color: #000000;
 }
 
 /************************** NAVIGATION **************************/
 nav {
   background-color: #000000;
   display: none;
+  padding: 1rem;
+  border-radius: 1rem;
 }
 
 nav ul {
