--- a/chamber/styles/normalize.css
+++ b/chamber/styles/normalize.css
@@ -191,6 +191,7 @@ textarea {
 
 button,
 input {
+  /* 1 */
   overflow: visible;
 }
 
@@ -201,6 +202,7 @@ input {
 
 button,
 select {
+  /* 1 */
   text-transform: none;
 }
 
